# fabric-system-tests

./: README.md  pyproject.toml  requirements.txt
scripts/node_tools/: cri-dockerd.sh  escp_install_rocky.sh  escp_install_ubuntu22_build.sh  kube_head.sh  kube_worker.sh
tests/: base_test.py  utils.py
tests/acceptance/: accept_slice_helper.py  acceptance_test.py  test_a_list_sites.py  test_b_create_vm_varying_sizes.py  test_c_create_nvme_vms.py  test_create_gpu_vms.py  test_create_nvme_vms.py  test_create_shared_nic_vms.py  test_create_smart_nic_vms.py  test_create_storage_vms.py  test_create_vm_varying_sizes.py  test_d_create_shared_nic_vms.py  test_e_create_smart_nic_vms.py  test_f_create_storage_vms.py  test_fabnetv4_shared_nic.py  test_fabnetv6_shared_nic.py  test_g_fabnetv4_shared_nic.py  test_h_fabnetv6_shared_nic.py  test_i_l2bridge_shared_nic.py  test_j_l2bridge_smart_nic.py  test_k_l2ptp_smart_nic.py  test_l2bridge_shared_nic.py  test_l2bridge_smart_nic.py  test_l2ptp_smart_nic.py  test_l2sts_shared_nic.py  test_l2sts_smart_nic.py  test_l_l2sts_shared_nic.py  test_list_sites.py  test_m_l2sts_smart_nic.py  test_mtu_shared_nic.py  test_z_create_gpu_vms.py  utils.py
tests/daily/: __init__.py  old_test_iPerf.py  slice_helper.py  slice_helper_old.py  test_iPerf.py
tests/system/: test_al2s_slice.py  test_fabnet_v4_ext_renew_slice.py  test_fabnet_v6_ext.py  test_fpga_slice.py  test_gpu_slice.py  test_l2bridge_slice.py  test_l2ptp_slice.py  test_l2sts_slice.py  test_l3rt_slice.py  test_mf_lib_slice.py  test_modify_slice.py  test_nvme_slice.py  test_p4_switch.py  (+2 more)
(+3 files in other folders)
