[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric-tests"
version = "0.1.0"
description = "A test suite for FABRIC Testbed"
authors = [
    { name = "Komal Thareja", email = "kthare10@renci.org" }
]

license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["FABRIC", "testbed", "automation", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing"
]

dependencies = [
    "pytest",
    "requests",
    "fabrictestbed-extensions>=1.7.3"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/fabric-tests"
"Bug Tracker" = "https://github.com/yourusername/fabric-tests/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers"
testpaths = [
    "tests"
]
